Fixed layout problem, included additional scripts and css.
- Fixed the layout issue by resolving a path problem
- included the bootstrap, Material icons script and styles of that

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,3 +1,8 @@
+body {
+  padding: 0;
+  margin: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif; }
+
 h1 {
   color: red; }
 
